Update Criminal and Antisocial History Assessment Tool.html

--- a/Criminal and Antisocial History Assessment Tool.html
+++ b/Criminal and Antisocial History Assessment Tool.html
@@ -124,7 +124,7 @@
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
-                        'Authorization': 'bearer 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' // Replace with your actual Hugging Face API key
+                        'Authorization': 'Bearer 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' // Replace with your actual Hugging Face API key
                     },
                     body: JSON.stringify({
                         inputs: data,
